--- a/ISMS/pom.xml
+++ b/ISMS/pom.xml
@@ -152,6 +152,12 @@
 			<artifactId>commons-dbcp</artifactId>
 			<version>1.4</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.mariadb.jdbc</groupId>
+			<artifactId>mariadb-java-client</artifactId>
+			<version>2.3.0</version>
+		</dependency>
 
 		<!-- hibernate (Validator) -->
 		<dependency>
